--- a/install
+++ b/install
@@ -31,7 +31,6 @@ link-dotfile --force --config app/htop
 link-dotfile --force --config app/neofetch
 link-dotfile --force --config app/nvim
 
-link-dotfile --force app/docker/config.json docker/config.json
 link-dotfile --force app/emacs/spacemacs/spacemacs.el spacemacs
 link-dotfile --force app/git/gitignore
 link-dotfile --force app/gnupg/dirmngr.conf gnupg/dirmngr.conf
@@ -48,11 +47,13 @@ link-dotfile --force shell/zsh/zshrc
 if _koopa_is_macos
 then
     link-dotfile --force --config app/alacritty
+    link-dotfile --force os/macos/app/docker/config.json docker/config.json
     link-dotfile --force os/macos/app/git/gitconfig
     link-dotfile --force os/macos/app/gnupg/gpg-agent.conf gnupg/gpg-agent.conf
 else
-    link-dotfile --force app/gnupg/gpg-agent.conf gnupg/gpg-agent.conf
     link-dotfile --force app/git/gitconfig
+    link-dotfile --force app/gnupg/gpg-agent.conf gnupg/gpg-agent.conf
+    link-dotfile --force os/linux/app/docker/config.json docker/config.json
 fi
 
 # macOS-specific R configuration.
