--- a/install
+++ b/install
@@ -8,23 +8,11 @@ _koopa_h1 "Linking dotfiles."
 
 koopa_prefix="$(_koopa_prefix)"
 
-rm -fr ~/.bash_logout
-rm -fr ~/.bash_profile
-rm -fr ~/.bashrc
-rm -fr ~/.condarc
-rm -fr ~/.config/doom
-rm -fr ~/.config/htop
-rm -fr ~/.config/neofetch
-rm -fr ~/.emacs
-rm -fr ~/.emacs.d
-rm -fr ~/.emacs.d-doom
-rm -fr ~/.emacs.d-spacemacs
-rm -fr ~/.kshrc
-rm -fr ~/.oh-my-zsh
-rm -fr ~/.shrc
-rm -fr ~/.zcompdump
-rm -fr ~/.zsh_history
-rm -fr ~/.zshrc
+rm -frv ~/.kshrc
+rm -frv ~/.oh-my-zsh
+rm -frv ~/.profile
+rm -frv ~/.shrc
+# > rm -frv ~/.zcompdump
 
 link-dotfile --force --config app/htop
 link-dotfile --force --config app/neofetch
@@ -36,9 +24,11 @@ link-dotfile --force app/vim/vim.d vim
 link-dotfile --force app/vim/vim.d vim
 link-dotfile --force app/vim/vimrc
 link-dotfile --force shell/bash/bash_profile
+link-dotfile --force shell/bash/bash_logout
 link-dotfile --force shell/bash/bashrc
 link-dotfile --force shell/bash/inputrc
 link-dotfile --force shell/zsh/zshrc
+link-dotfile --force shell/zsh/zlogout
 
 link-dotfile --force --config \
     app/emacs/doom/config.d \
