--- a/install
+++ b/install
@@ -8,6 +8,7 @@ _koopa_h1 "Linking dotfiles."
 
 koopa_prefix="$(_koopa_prefix)"
 
+rm -frv ~/.*-history
 rm -frv ~/.kshrc
 rm -frv ~/.oh-my-zsh
 rm -frv ~/.profile
