--- a/install
+++ b/install
@@ -8,12 +8,13 @@ _koopa_h1 "Linking dotfiles."
 
 koopa_prefix="$(_koopa_prefix)"
 
+# > rm -frv ~/.zcompdump
 rm -frv ~/.*-history
 rm -frv ~/.kshrc
 rm -frv ~/.oh-my-zsh
 rm -frv ~/.profile
 rm -frv ~/.shrc
-# > rm -frv ~/.zcompdump
+rm -frv ~/.zprofile
 
 link-dotfile --force --config app/htop
 link-dotfile --force --config app/neofetch
