--- a/install
+++ b/install
@@ -21,6 +21,7 @@ link-dotfile --force --config app/neofetch
 link-dotfile --force --config app/nvim
 link-dotfile --force app/git/gitignore
 link-dotfile --force app/tmux/tmux.conf
+link-dotfile --force app/tmux/tmux.d tmux
 link-dotfile --force app/vim/vim.d vim
 link-dotfile --force app/vim/vimrc
 link-dotfile --force shell/bash/bash_logout
