--- a/install
+++ b/install
@@ -4,7 +4,7 @@ set -Eeu -o pipefail
 set -x
 
 # shellcheck source=/dev/null
-checks=0 source "$(koopa header bash)"
+checks=0 source "$(${KOOPA_PREFIX:?}/bin/koopa header bash)"
 
 _koopa_h1 "Installing dotfiles."
 
