Add placeholder for 'main' instead of 'master' branch config

--- a/install
+++ b/install
@@ -16,10 +16,14 @@ rm -frv ~/.profile
 rm -frv ~/.shrc
 rm -frv ~/.zprofile
 
+# > link-dotfile --force --config app/git/template git/template
+link-dotfile --force --config app/emacs/doom/config.d doom
 link-dotfile --force --config app/htop
 link-dotfile --force --config app/neofetch
 link-dotfile --force --config app/nvim
+link-dotfile --force app/emacs/spacemacs/spacemacs.el spacemacs
 link-dotfile --force app/git/gitignore
+link-dotfile --force app/gnupg/dirmngr.conf gnupg/dirmngr.conf
 link-dotfile --force app/tmux/tmux.conf
 link-dotfile --force app/tmux/tmux.d tmux
 link-dotfile --force app/vim/vim.d vim
@@ -31,27 +35,13 @@ link-dotfile --force shell/bash/inputrc
 link-dotfile --force shell/zsh/zlogout
 link-dotfile --force shell/zsh/zshrc
 
-link-dotfile --force --config \
-    app/emacs/doom/config.d \
-    doom
-link-dotfile --force \
-    app/emacs/spacemacs/spacemacs.el \
-    spacemacs
-link-dotfile --force \
-    app/gnupg/dirmngr.conf \
-    gnupg/dirmngr.conf
-
 if _koopa_is_macos
 then
     link-dotfile --force --config app/alacritty
     link-dotfile --force app/vim/gvimrc
-    link-dotfile --force \
-        os/macos/app/gnupg/gpg-agent.conf \
-        gnupg/gpg-agent.conf
+    link-dotfile --force os/macos/app/gnupg/gpg-agent.conf gnupg/gpg-agent.conf
 else
-    link-dotfile --force \
-        app/gnupg/gpg-agent.conf \
-        gnupg/gpg-agent.conf
+    link-dotfile --force app/gnupg/gpg-agent.conf gnupg/gpg-agent.conf
 fi
 
 # macOS-specific R configuration.
