Add EditorConfig support

--- a/install
+++ b/install
@@ -24,6 +24,7 @@ link-dotfile --force --config app/emacs/doom/config.d doom
 link-dotfile --force --config app/htop
 link-dotfile --force --config app/neofetch
 link-dotfile --force --config app/nvim
+link-dotfile --force app/editorconfig/editorconfig
 link-dotfile --force app/emacs/spacemacs/spacemacs.el spacemacs
 link-dotfile --force app/git/gitignore
 link-dotfile --force app/gnupg/dirmngr.conf gnupg/dirmngr.conf
