--- a/install
+++ b/install
@@ -24,6 +24,7 @@ link-dotfile --force --config app/emacs/doom/config.d doom
 link-dotfile --force --config app/htop
 link-dotfile --force --config app/neofetch
 link-dotfile --force --config app/nvim
+link-dotfile --force app/curl/curlrc
 link-dotfile --force app/editorconfig/editorconfig
 link-dotfile --force app/emacs/spacemacs/spacemacs.el spacemacs
 link-dotfile --force app/git/gitignore
@@ -32,6 +33,7 @@ link-dotfile --force app/tmux/tmux.conf
 link-dotfile --force app/tmux/tmux.d tmux
 link-dotfile --force app/vim/vim.d vim
 link-dotfile --force app/vim/vimrc
+link-dotfile --force app/wget/wgetrc
 link-dotfile --force shell/bash/bash_logout
 link-dotfile --force shell/bash/bash_profile
 link-dotfile --force shell/bash/bashrc
