--- a/install
+++ b/install
@@ -39,6 +39,7 @@ link-dotfile --force shell/bash/bash_logout
 link-dotfile --force shell/bash/bash_profile
 link-dotfile --force shell/bash/bashrc
 link-dotfile --force shell/bash/inputrc
+link-dotfile --force shell/posix/aliases
 link-dotfile --force shell/posix/shrc
 link-dotfile --force shell/zsh/zlogout
 link-dotfile --force shell/zsh/zshrc
