--- a/install
+++ b/install
@@ -32,6 +32,7 @@ link-dotfile --force --config app/emacs/doom/config.d doom
 link-dotfile --force --config app/htop
 link-dotfile --force --config app/neofetch
 link-dotfile --force --config app/nvim
+link-dotfile --force --config shell/fish
 link-dotfile --force app/curl/curlrc
 link-dotfile --force app/editorconfig/editorconfig
 link-dotfile --force app/emacs/spacemacs/spacemacs.el spacemacs
