--- a/install
+++ b/install
@@ -1,9 +1,6 @@
 #!/usr/bin/env bash
 set -Eeu -o pipefail
 
-# FIXME
-set -x
-
 # shellcheck source=/dev/null
 checks=0 source "$(koopa header bash)"
 prefix="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null 2>&1 && pwd -P)"
@@ -33,6 +30,7 @@ install() {
     link --force 'app/git/gitignore'
     link --force 'app/gnupg/dirmngr.conf' 'gnupg/dirmngr.conf'
     link --force 'app/python/pylintrc'
+    link --force 'app/python/pyrc'
     link --force 'app/screen/screenrc'
     link --force 'app/terminfo/terminfo.d' 'terminfo'
     link --force 'app/tmux/tmux.conf'
