--- a/install
+++ b/install
@@ -23,6 +23,8 @@ install() {
     link --force --config 'app/htop'
     link --force --config 'app/neofetch'
     link --force --config 'app/nvim'
+    link --force --config 'app/ranger'
+    link --force --config 'app/rstudio'
     link --force --config 'shell/fish'
     link --force 'app/curl/curlrc'
     link --force 'app/editorconfig/editorconfig'
