Improve starship config support

--- a/install
+++ b/install
@@ -27,6 +27,7 @@ install() {
     link --force --config 'app/ranger'
     link --force --config 'app/rstudio'
     link --force --config 'shell/fish'
+    link --force --config 'app/starship/starship.toml' 'starship.toml'
     link --force 'app/curl/curlrc'
     link --force 'app/editorconfig/editorconfig'
     link --force 'app/emacs/spacemacs/spacemacs.el' 'spacemacs'
