Add global pip configuration

--- a/install
+++ b/install
@@ -29,10 +29,11 @@ install() {
     link --force --config 'app/htop'
     link --force --config 'app/neofetch'
     link --force --config 'app/nvim'
+    link --force --config 'app/pip'
     link --force --config 'app/ranger'
     link --force --config 'app/rstudio'
-    link --force --config 'shell/fish'
     link --force --config 'app/starship/starship.toml' 'starship.toml'
+    link --force --config 'shell/fish'
     link --force 'app/curl/curlrc'
     link --force 'app/editorconfig/editorconfig'
     link --force 'app/emacs/doom' 'doom.d'
