--- a/install
+++ b/install
@@ -27,6 +27,7 @@ install() {
         "${HOME}/.zprofile"
     link --force --config 'app/broot'
     link --force --config 'app/htop'
+    link --force --config 'app/libreoffice'
     link --force --config 'app/neofetch'
     link --force --config 'app/nvim'
     link --force --config 'app/pip'
