--- a/install
+++ b/install
@@ -26,6 +26,7 @@ install() {
         "${HOME}/.shrc" \
         "${HOME}/.zprofile"
     link --force --config 'app/broot'
+    link --force --config 'app/hadolint/hadolint.yaml' 'hadolint.yaml'
     link --force --config 'app/htop'
     link --force --config 'app/libreoffice'
     link --force --config 'app/neofetch'
