--- a/todo.org
+++ b/todo.org
@@ -1,10 +1,12 @@
 #+TITLE: Dotfiles
 #+STARTUP: content
 * Vim
+** TODO Work on reconfiguring jedi-vim support for Python autocompletion.
 ** TODO Consider adding support for emmet-vim in a future update.
 ** TODO Consider improving R IDE support.
         R IDE guides:
-            https://www.freecodecamp.org/news/turning-vim-into-an-r-ide-cd9602e8c217/
+            https://www.freecodecamp.org/news/
+                turning-vim-into-an-r-ide-cd9602e8c217/
         For completion:
             https://github.com/ncm2/ncm2
             https://github.com/gaalcaras/ncm-R
