--- a/install
+++ b/install
@@ -48,7 +48,7 @@ install() {
     link --force 'app/screen/screenrc'
     link --force 'app/terminfo/terminfo.d' 'terminfo'
     link --force 'app/tmux/tmux.conf'
-    link --force 'app/tmux/tmux.d' 'tmux'
+    # > link --force 'app/tmux/tmux.d' 'tmux'
     link --force 'app/vim/vim.d' 'vim'
     link --force 'app/vim/vimrc'
     link --force 'app/wget/wgetrc'
