Work on rearranging dotfiles

--- a/install
+++ b/install
@@ -43,7 +43,7 @@ install() {
     link --force 'app/emacs/spacemacs/spacemacs.el' 'spacemacs'
     link --force 'app/git/gitignore'
     link --force 'app/gnupg/dirmngr.conf' 'gnupg/dirmngr.conf'
-    link --force 'app/python/pylintrc'
+    link --force 'app/pylint/pylintrc'
     link --force 'app/python/pyrc'
     link --force 'app/screen/screenrc'
     link --force 'app/terminfo/terminfo.d' 'terminfo'
