--- a/install
+++ b/install
@@ -71,8 +71,13 @@ install() {
         link --force --config 'app/alacritty'
         link --force 'app/vim/gvimrc'
         link --force 'os/macos/app/gnupg/gpg-agent.conf' 'gnupg/gpg-agent.conf'
-    else
+    elif koopa::is_linux
+    then
         link --force 'app/gnupg/gpg-agent.conf' 'gnupg/gpg-agent.conf'
+        if koopa::is_ubuntu
+        then
+            link --force 'os/linux/distro/ubuntu/hushlogin'
+        fi
     fi
     if [[ -d "${HOME}/.gnupg" ]]
     then
