--- a/install
+++ b/install
@@ -31,6 +31,7 @@ install() {
     link --force --config 'app/broot'
     link --force --config 'app/hadolint/hadolint.yaml' 'hadolint.yaml'
     link --force --config 'app/htop'
+    link --force --config 'app/kakoune' 'kak'
     link --force --config 'app/neofetch'
     link --force --config 'app/nvim'
     link --force --config 'app/pip'
