--- a/install
+++ b/install
@@ -1,10 +1,34 @@
 #!/usr/bin/env bash
 set -Eeu -o pipefail
 
-export KOOPA_CHECKS=0
-# shellcheck source=/dev/null
-source "$(koopa header bash)"
-prefix="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null 2>&1 && pwd -P)"
+add_to_path_start() { # {{{1
+    # """
+    # Add to start of 'PATH'.
+    # @note Updated 2021-06-14.
+    # """
+    local prefix
+    [[ "$#" -gt 0 ]] || return 1
+    PATH="${PATH:-}"
+    for prefix in "$@"
+    do
+        PATH="${prefix}:${PATH}"
+    done
+    export PATH
+    return 0
+}
+
+is_installed() { # {{{1
+    # """
+    # Are all of the requested programs installed?
+    # @note Updated 2021-06-14.
+    # """
+    local cmd
+    for cmd in "$@"
+    do
+        command -v "$cmd" >/dev/null || return 1
+    done
+    return 0
+}
 
 link() {
     koopa::link_dotfile --force "$@"
@@ -13,16 +37,35 @@ link() {
 install() {
     # """
     # Install dotfiles.
-    # @note Updated 2021-06-07.
+    # @note Updated 2021-06-14.
     # """
-    local name_fancy
+    local koopa koopa_prefix name_fancy prefix
     name_fancy='dotfiles'
-    koopa::install_start "$name_fancy"
-    expected_prefix="$(koopa::dotfiles_prefix)"
-    koopa::assert_are_identical \
-        "$(koopa::realpath "$prefix")" \
-        "$(koopa::realpath "$expected_prefix")"
-    koopa::add_config_link "$prefix" 'dotfiles'
+    koopa='koopa'
+    prefix="$( \
+        cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null 2>&1 && \
+        pwd -P \
+    )"
+    if ! is_installed 'koopa'
+    then
+        # By default, expected to be installed at 'app/dotfiles/rolling'
+        # inside of koopa.
+        koopa_prefix="$( \
+            cd "$(dirname "$prefix")/../.." >/dev/null 2>&1 && \
+            pwd -P \
+        )"
+        koopa="${koopa_prefix}/bin/koopa"
+        if [[ ! -x "$koopa" ]]
+        then
+            printf "Failed to locate '%s' at '%s'.\n" 'koopa' "$prefix" >&2
+            return 1
+        fi
+    fi
+    export KOOPA_CHECKS=0
+    # shellcheck source=/dev/null
+    source "$("$koopa" header bash)"
+    koopa::install_start "$name_fancy" "$prefix"
+    koopa::add_koopa_config_link "$prefix" 'dotfiles'
     koopa::rm \
         "${HOME}/.R/Makevars" \
         "${HOME}/.config/doom" \
@@ -93,7 +136,7 @@ install() {
     then
         koopa::chmod 0700 "${HOME}/.ssh"
     fi
-    koopa::install_success "$name_fancy"
+    koopa::install_success "$name_fancy" "$prefix"
     return 0
 }
 
