--- a/install
+++ b/install
@@ -61,6 +61,10 @@ install() {
             return 1
         fi
     fi
+
+    echo 'FIXME 1'
+    exit 0
+
     export KOOPA_CHECKS=0
     # shellcheck source=/dev/null
     source "$("$koopa" header bash)"
